tests/baselines/reference/unicodeExtendedEscapesInStrings24_ES5.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings24_ES5.ts(2,12): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings24_ES5.ts(2,27): error TS1002: Unterminated string literal.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings24_ES5.ts (2 errors) ====
    
    var x = "\u{00000000000067
               
!!! error TS1125: Hexadecimal digit expected.
                              
!!! error TS1002: Unterminated string literal.
    